Working BLE Remote Extension with idle image

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 
+FA05-BLE-Rx/NOVA-FENCING-CLUB-LOGO-Black-tiny.xcf
+FA05-BLE-Rx/NOVA-FENCING-CLUB-LOGO-Black.xcf
+FA05-BLE-Rx/NOVA-FENCING-CLUB-LOGO-cropped.xcf
+FA05-BLE-Rx/NOVA-FENCING-CLUB-LOGO-Outline.bmp
+FA05-BLE-Rx/NOVA-FENCING-CLUB-LOGO-Outline.xcf
+FA05-BLE-Rx/NOVA-FENCING-CLUB-LOGO-tiny.c
+FA05-BLE-Rx/NOVA-FENCING-CLUB-LOGO-tiny.xcf
+FA05-BLE-Rx/NOVA-FENCING-CLUB-LOGO-wText-small.xcf
+FA05-BLE-Rx/NOVA-FENCING-CLUB-LOGO-wText.xcf
+FA05-BLE-Rx/NOVA-FENCING-CLUB-LOGO.xcf
